<resources>
    <string name="app_name">Тест МЧС для взрослых</string>
    <string name="start_test_btn">Начать тест</string>


    <string name="question">Вопрос</string>

    <string name="answer_a">A</string>
    <string name="answer_b">B</string>
    <string name="answer_c">C</string>
    <string name="answer_d">D</string>

    <string name="head_finish">Резултаты тестирования:</string>
    <string name="result_test_count">Правильных ответов:</string>
    <string name="wrong_show">Вы ошиблись в этих вопросах:</string>
    <string name="edit_element">Редактировать</string>
    <string name="delite_element">Удалить</string>
    <string name="delite_all_elements">Удалить все</string>
    <string name="list_question">Список вопросов</string>
    <string name="variants">Варианты ответов</string>
    <string name="admin">Администратор</string>
    <string name="cancel">отмена</string>
    <string name="ok">ок</string>


    <!--    test base     -->
    <string name="question_0">Ўзбекистон Республикаси Вазирлар Маҳкамасининг 27.10.1998 йилдаги 455-сонли қарорига мувофиқ табиий хусусиятли фавқулодда вазиятлар қайси гуруҳларга ажратилади?</string>
    <string name="answer_a_0">Геологик хавфли ҳодисалар, гидрометеорологик хавфли ҳодисалар, фавқулодда эпидемиологик, эпизоотик ва эпифитотик вазиятлар.</string>
    <string name="answer_b_0">Геологик хавфли ҳодисалар, гидрометеорологик хавфли ҳодисалар.</string>
    <string name="answer_c_0">Қуруқлик ва гидросфера ҳолатининг ўзгариши билан боғлиқ вазиятлар.</string>
    <string name="answer_d_0">Гидрометеорологик хавфли ҳодисалар, гидросфера ҳолатининг ўзгариши билан боғлиқ вазиятлар.</string>
    <string name="is_answer_0">0</string>

    <string name="question_1">Сел оқими тушунчаси қайси жойда тўғри ифода этилган?</string>
    <string name="answer_a_1">Оғирлик кучи таъсирида тоғ ёнбағирларидан пастга сурилаётган тупроқ массаси.</string>
    <string name="answer_b_1">Тоғ дарёлари ўзанларида тўсатдан юзага келувчи, катта ҳажмдаги қум, тош ва тоғжинслари бўлаклари аралашмасидан иборат лойқа ёки лой-тошли оқим.</string>
    <string name="answer_c_1">Катта кучга эга ҳаво ҳаракати.</string>
    <string name="answer_d_1">Қор массасининг тоғ ёнбағирлари бўйлаб пастга тушиши.</string>
    <string name="is_answer_1">1</string>

    <string name="question_2">Гидрометеорологик хавфли ҳодисаларга қайси фавқулодда вазият турлари киради?</string>
    <string name="answer_a_2">Сув тошқинлари, сув кўтарилишлари, сел оқимлари, қор кўчкиси, кучли шамол, жала.</string>
    <string name="answer_b_2">Сув тошқинлари, сел, ҳалокатли сув босишлари.</string>
    <string name="answer_c_2">Қор кўчкиси, ер кўчкиси, кучли шамоллар.</string>
    <string name="answer_d_2">Цунами, сув тошқинлари, сел ва ҳалокатли сув босишлари.</string>
    <string name="is_answer_2">0</string>

    <string name="question_3">Стресс нима?</string>
    <string name="answer_a_3">Инсонни шоду-хуррамликка туширувчи ҳолат.</string>
    <string name="answer_b_3">Ҳайвон ва инсон организмида турли нохуш омиллар (стрессорлар) таъсирига жавобан юзага келувчи физиологик ҳимоя реакциялари мажмуи.</string>
    <string name="answer_c_3">Хавф-хатарни сезиш, хавфсираш ҳолати.</string>
    <string name="answer_d_3">Назоратдан чиқиб кетган қўрқув.</string>
    <string name="is_answer_3">1</string>

    <string name="question_4">Гидротехника иншоотларининг  тўлиқ турларини кўрсатинг?</string>
    <string name="answer_a_4">Шлюзлар, кўллар, оқава сув чиқариш иншоотлари, булоқлар.</string>
    <string name="answer_b_4">Денгизлар, бассейнлар, ирмоқлар, суғориш иншоотлари, қувурлар.</string>
    <string name="answer_c_4">Сув-энергетика, сув таъминоти, суғориш иншоотлари, оқава сув чиқариш, сув-транспорт, балиқ ховузлари, спорт, безак иншоотлари.</string>
    <string name="answer_d_4">Сув энергетика иншоотлари, тўғонлар, безак иншоотлари, кўллар.</string>
    <string name="is_answer_4">2</string>

    <string name="question_5">Бирламчи ёнғин ўчириш воситаларига нималар киради?</string>
    <string name="answer_a_5">Ўт ўчиргичлар.</string>
    <string name="answer_b_5">Сув насослари.</string>
    <string name="answer_c_5">Ёнғин ўчириш машиналари.</string>
    <string name="answer_d_5">Ҳамма жавоблар тўғри.</string>
    <string name="is_answer_5">0</string>

    <string name="question_6">Қон тўхтатувчи боғлам (жгут) қанча муддатга қўйилади?</string>
    <string name="answer_a_6">2 соатга.</string>
    <string name="answer_b_6">1,5 соатга.</string>
    <string name="answer_c_6">2 – 2,5 соатга.</string>
    <string name="answer_d_6">1 соатга.</string>
    <string name="is_answer_6">3</string>

    <string name="question_7">Қайси жавобда газниқобларнинг турлари тўғри кўрсатилган?</string>
    <string name="answer_a_7">Фильтрловчи, изоляцияловчи.</string>
    <string name="answer_b_7">Фильтрловчи, ўтказувчи.</string>
    <string name="answer_c_7">Герметик, кичик габоритли. </string>
    <string name="answer_d_7">Аэрозольга қарши, катта габаритли. </string>
    <string name="is_answer_7">0</string>

    <string name="question_8">Релаксация нима?</string>
    <string name="answer_a_8">Жисмоний ёки руҳий зўриқишдан қисман ёки тўла озод бўлиш усули.</string>
    <string name="answer_b_8">Стрессни кучайтириш усули.</string>
    <string name="answer_c_8">Руҳий зўриқишни бартараф этиш усули.</string>
    <string name="answer_d_8">Аутотренинг машқларини бажариш усули.</string>
    <string name="is_answer_8">0</string>

    <string name="question_9">Панажойларда ичимлик сувининг меъёри 1 суткада неча литр бўлиши керак?</string>
    <string name="answer_a_9">2 литр.</string>
    <string name="answer_b_9">3 литр.</string>
    <string name="answer_c_9">4 литр.</string>
    <string name="answer_d_9">5 литр.</string>
    <string name="is_answer_9">1</string>

    <string name="question_10">Аҳолига хабар бериш қайси алоқа ва хабар бериш воситалари орқали амалга оширилади?</string>
    <string name="answer_a_10">Симли ва симсиз алоқа воситалари орқали.</string>
    <string name="answer_b_10">Телефон ва уяли телефонлар орқали.</string>
    <string name="answer_c_10">Телевидение ва радио каналлари орқали.</string>
    <string name="answer_d_10">Телефон, радиотелефонлар, телевидение ва радиоканаллари орқали.</string>
    <string name="is_answer_10">3</string>

    <string name="question_11">Карантин дегани нима?</string>
    <string name="answer_a_11">Юқумли (ўта хавфли юқумли) касалликлар тарқалишининг олдини олиш ва уларнинг оқибатларини бартараф этиш бўйича алоҳидалаш йўли билан эпидемияга қарши ўтказиладиган қатъий чора-тадбирлар мажмуи.</string>
    <string name="answer_b_11">Касаллик тарқалган ҳудуддан чиқишни ва ушбу ҳудудга киришни чеклашга қаратилган тадбирлар мажмуи.</string>
    <string name="answer_c_11">Касаллик тарқалган ҳудуддаги барча аҳолини бошқа аҳоли пунктига кўчириш бўйича олиб бориладиган тадбирлар мажмуи.</string>
    <string name="answer_d_11">Дератизация ўтказиш.</string>
    <string name="is_answer_11">0</string>

    <string name="question_12">Обсервация нима?</string>
    <string name="answer_a_12">Касаллик қўзғатувчиси ўта хавфли касалликлар гуруҳига кирмайдиган ва касалликнинг оммавий тарқалиш хавфи бўлмаган вақтда ўтказиладиган тадбирлар мажмуи.</string>
    <string name="answer_b_12">Ўта хавфли инфекцияли касалликлар ўчоғини тўла изоляция қилиб қўйишга қаратилган тадбирлар мажмуи.</string>
    <string name="answer_c_12">Касалликнинг тарқалиб кетишининг олдини олиш мақсадида ўтказиладиган профилактика.</string>
    <string name="answer_d_12">Кемирувчиларни йўқотишга қаратилган тадбирлар.</string>
    <string name="is_answer_12">0</string>

    <string name="question_13">Ер кўчкисига қаерда тўғри таъриф берилган?</string>
    <string name="answer_a_13">Намгарчилик туфайли оғирлик кучи таъсирида тоғ жинсларининг ёнбағир бўйлаб пастга томон силжиши.</string>
    <string name="answer_b_13">Кутилмаганда рўй берадиган табиат ҳодисаси.</string>
    <string name="answer_c_13">Тоғ ёнбағирларида тўсатдан юзага келадиган сув, қум, тош ва лойлардан иборат оқим.</string>
    <string name="answer_d_13">Катта ҳажмдаги тоғ жинсларининг пастга узилиб тушиши.</string>
    <string name="is_answer_13">0</string>

    <string name="question_14">Ваҳима нима?</string>
    <string name="answer_a_14">Ҳайвонот ва инсон организмида турли нохуш омиллар (стрессорлар) таъсирига жавобан юзага келувчи физиологик ҳимоя реакциялари мажмуи.</string>
    <string name="answer_b_14">Одамлар гуруҳини қамраб олган ва бошқариб бўлмайдиган жараёнга айланган қўрқув ҳисси.</string>
    <string name="answer_c_14">Тасаввурдаги ёки ҳақиқий хавфдан ташвишланиш, қайғуриш.</string>
    <string name="answer_d_14">Хавф-хатарни доимий сезиш, мунтазам хавотирда юриш.</string>
    <string name="is_answer_14">1</string>

    <string name="question_15">Қайси моддалар буғи энг заҳарли?</string>
    <string name="answer_a_15">Хлор.</string>
    <string name="answer_b_15">Аммиак.</string>
    <string name="answer_c_15">Симоб.</string>
    <string name="answer_d_15">Углерод икки оксиди.</string>
    <string name="is_answer_15">2</string>

    <string name="question_16">Геологик хавфли ҳодисаларга қайси фавқулодда вазият турлари киради?</string>
    <string name="answer_a_16">Зилзила, цунами, ер кўчкиси.</string>
    <string name="answer_b_16">Зилзила, ер  ва қор кўчкилари.</string>
    <string name="answer_c_16">Ер кўчкиси, қор кўчкиси, тоғ ўпирилишлари.</string>
    <string name="answer_d_16">Зилзила, ер кўчкиси ва тоғ ўпирилишлари.</string>
    <string name="is_answer_16">3</string>

    <string name="question_17">Зилзила нима?</string>
    <string name="answer_a_17">Геологик хавфли ҳодиса.</string>
    <string name="answer_b_17">Фавқулодда вазиятнинг бир тури.</string>
    <string name="answer_c_17">Ер ички ҳаракатлари натижасида унинг юзасида пайдо бўладиган тебранма ҳаракат.</string>
    <string name="answer_d_17">Табиат ҳодисаси.</string>
    <string name="is_answer_17">2</string>

    <string name="question_18">Сирена хабар бериш сигнали нима маънони англатади?</string>
    <string name="answer_a_18">“Диққат барчага!”</string>
    <string name="answer_b_18">“Сув тошқини!”</string>
    <string name="answer_c_18">“Кимёвий заҳарланиш хавфи!”</string>
    <string name="answer_d_18">“Радиациявий заҳарланиш хавфи!”</string>
    <string name="is_answer_18">0</string>

    <string name="question_19">Кимёвий хавфли объектда авария содир бўлганда зарарланиш ҳудудида қолдингиз. Ҳудудни қайси йўналишда тарк этиш лозим?</string>
    <string name="answer_a_19">Шамол йўналиши бўйича.</string>
    <string name="answer_b_19">Шамол йўналишига қарама-қарши.</string>
    <string name="answer_c_19">Шамол йўналишига перпендикуляр.</string>
    <string name="answer_d_19">Шамол йўналишига аҳамият берилмайди.</string>
    <string name="is_answer_19">2</string>

</resources>